test/compile_errors/err_keyword_as_var_yield.w
//! expect-check-fail: expected identifier
let yield = 42
fn main:
    let x = 1
